--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link href="styles/custom.css" rel="stylesheet" type="text/css">
 <script src="jquery-mobile/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.3.0.min.js" type="text/javascript"></script>
+<meta name="viewport" content="width=device-width" />
 </head> 
 <body> 
 
